Drag and drop from File Explorer is no longer allowed after drag and drop an image within the content area.
Categories
(Core :: DOM: Copy & Paste and Drag & Drop, defect, P2)
Tracking
()
People
(Reporter: alice0775, Assigned: edgar)
References
(Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(3 files)
|
48 bytes,
text/x-phabricator-request
|
Details | Review | |
|
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-beta+
|
Details | Review |
|
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-esr115+
|
Details | Review |
Steps to reproduce:
- Drag & drop an image(A) from file explorer to content area
- Drag and drop the dropped image within its content area
- Try drag & drop an another image(B) from file explorer to content area
Actual results:
Screencast: https://youtu.be/EDHhOz-zXtQ .
Dropping operation is not allowed. Mouse cursor indicates as no-drop.
And drag and drop fails.
Expected results:
Dropping operation should be allowed.
And drag and drop should be successfully performed.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=15549745cfb86f9b189532952dcb587da581f99a&tochange=2ca3d042a78dbdc35115ff4c362c4ba8801b56d1
Comment 1•2 years ago
|
||
Set release status flags based on info from the regressing bug 1809122
:edgar, since you are the author of the regressor, bug 1809122, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
| Assignee | ||
Comment 2•2 years ago
|
||
Comment 4•2 years ago
|
||
| bugherder | ||
Comment 5•2 years ago
|
||
The patch landed in nightly and beta is affected.
:edgar, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox124towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 6•2 years ago
|
||
Original Revision: https://phabricator.services.mozilla.com/D203103
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 7•2 years ago
|
||
Uplift Approval Request
- String changes made/needed: None
- Code covered by automated testing: no
- Is Android affected?: yes
- Risk associated with taking this patch: Low
- User impact if declined: Drag and drop from File Explorer is no longer worked after drag and drop an image within the content area
- Fix verified in Nightly: yes
- Needs manual QE test: yes
- Steps to reproduce for manual QE testing: Follow the steps in https://bugzilla.mozilla.org/show_bug.cgi?id=1881257#c0
- Explanation of risk level: The change is straightforward, should be safe.
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Comment 9•2 years ago
|
||
Verified as fixed in our latest Beta 124.0b8 as well as our latest Nightly build 125.0a1 (2024-03-05).
| Assignee | ||
Comment 11•2 years ago
|
||
Original Revision: https://phabricator.services.mozilla.com/D203103
Updated•2 years ago
|
Comment 12•2 years ago
|
||
Uplift Approval Request
- Fix verified in Nightly: yes
- Is Android affected?: yes
- String changes made/needed: None
- User impact if declined: Drag and drop from File Explorer is no longer worked after drag and drop an image within the content area
- Steps to reproduce for manual QE testing: Follow the steps in https://bugzilla.mozilla.org/show_bug.cgi?id=1881257#c0
- Risk associated with taking this patch: Low
- Code covered by automated testing: no
- Explanation of risk level: The change is straightforward, should be safe.
- Needs manual QE test: yes
| Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 13•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Comment 14•2 years ago
|
||
Verified as fixed in our latest ESR build 115.9.0esr ID: 20240308231321
Description
•