Bug 1881257 - Reset mSourceTopWindowContext when drag session end;  a=diannaS

Original Revision: https://phabricator.services.mozilla.com/D203103

Differential Revision: https://phabricator.services.mozilla.com/D204101